<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#ef8904"
        android:text="@string/register_form"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--    First Name-->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_first_name"
            android:textSize="20sp"
            android:textColor="@color/orange"/>
        <EditText
            android:id="@+id/firstname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/firstname"
            android:textSize="15sp"/>

        <!--    LastName-->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_last_name"
            android:textSize="20sp"
            android:layout_marginLeft="10sp"

            android:textColor="@color/orange"/>
        <EditText
            android:id="@+id/lastname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/lastname"
            android:textSize="15sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20sp">
        <!--    Password-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/text_password"
            android:textSize="20sp"
            android:textColor="@color/orange"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:hint="@string/password"
            android:textSize="20sp"
            android:inputType="textPassword"/>

        <!--    Address-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/text_address"
            android:textSize="20sp"
            android:textColor="@color/orange"/>
        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:hint="@string/address"
            android:textSize="20sp"/>

        <!--    Phone-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/text_phone"
            android:textSize="20sp"
            android:textColor="@color/orange"/>
        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:hint="@string/phone_number"
            android:textSize="20sp"/>
    </LinearLayout>

    <!--    avatar-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/avatar"
            android:textSize="20sp"
            android:textColor="@color/orange"/>
        <ImageView
            android:src="@drawable/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp" />
    </LinearLayout>

    <!--    email-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/text_email"
            android:textSize="20sp"
            android:textColor="@color/orange"/>
        <EditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:hint="@string/email"
            android:textSize="20sp"/>

        <!--    Birthday-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/text_dob"
            android:textSize="20sp"
            android:textColor="@color/orange"/>
        <EditText
            android:id="@+id/birthday"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:hint="@string/date_of_birth"
            android:textSize="20sp"/>

        <!--    Gender-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/gender"
            android:textSize="20sp"
            android:textColor="@color/orange"/>
        <EditText
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:hint="@string/gender"
            android:textSize="20sp"/>
    </LinearLayout>

    <!--    Button register-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <Button
            android:id="@+id/btnRegister"
            android:text="@string/register"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:backgroundTint="@color/orange" />
    </LinearLayout>
</LinearLayout>

